add tvshowlibrary api
